--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -76,12 +76,18 @@
       width: 100%;
       &__items {
         width: 15%;
+        margin-right: 1.5em;
         padding: 1rem;
         border: 1px solid rgba(128, 128, 128, 0.3);
-        border-right: none;
+        // border-right: none;
         font-size: 0.5rem;
         background-color: #fff;
-        border-radius: 0.25em 0 0 0;
+        border-radius: 0.25em;
+        &__head {
+          font-size: 1rem;
+          text-align: center;
+          border-bottom: 1px solid #ccc;
+        }
         &__item {
           img {
             display: block;
@@ -100,7 +106,7 @@
         padding: 0 0 !important;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
-        border-radius: 0 0.25em 0 0;
+        border-radius: 0.25em;
         &__image {
           width: 100%;
           height: auto;
@@ -195,64 +201,113 @@
       }
     }
   }
-  &__comments {
+  &__bottom {
     display: flex;
-    width: calc(100% - 1.5em);
-    margin-bottom: 2em;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 4em;
+    margin-top:2rem;
     &__container {
-      margin-right: 1.5em;
-      background-color: #fff;
-      border: solid 1px rgba(128, 128, 128, 0.3);
-      border-top: none;
-      border-radius: 0 0 0.25em 0.25em;
-      padding: 1em;
+      width: 60%;
       &__head {
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
       }
       &__comments {
+        background-color: #fff;
+        border: solid 1px rgba(128, 128, 128, 0.3);
+        border-radius: 0.25em;
+        padding: 1em;
         display: flex;
+        overflow-x: scroll;
         &__comment {
-          width:24%;
+          min-width:30%;
+          margin-right:3%;
+          &__user {
+            display: flex;
+            justify-content: center;
+            &__icon {
+              margin-right: 1rem;
+              img {
+                border-radius: 1.5rem;
+              }
+            }
+            &__info {
+              font-size: 0.8rem;
+              &__id {
+                font-size: 0.6rem;
+              }
+            }
+          }
+          &__body {
+            margin-top: 0.5rem;
+            height: 11rem;
+            overflow: scroll;
+            border: solid 1px rgba(128, 128, 128, 0.3);
+            border-radius: 0.2rem;
+            padding: 0.5rem;
+            font-size: 0.8rem;
+          }
+          &__date {
+            font-size: 0.7rem;
+            display: inline;
+            line-height: 1rem;
+            margin-right: 2rem;
+            text-decoration: underline;
+          }
+          &__trash {
+            font-size: 0.8rem;
+            line-height: 1.5rem;
+            display: inline;
+          }
         }
       }
     }
-    .comment {
-      display: none;
+    &__form {
+      width: 35%;
+      display: flex;
       background-color: #fff;
       border: solid 1px rgba(128, 128, 128, 0.3);
       border-radius: 0.25em;
       padding: 1em;
-      &__form {
-        display: flex;
-        &__icon {
-          margin-right: 0.5em;
-          img {
-            border-radius: 1.5em;
+      &__icon {
+        margin-right: 0.5rem;
+        img {
+          border-radius: 1.5em;
+        }
+      }
+      &__new {
+        display: inline-block;
+        width: 100%;
+        &__body {
+          width: 100%;
+          #comment_body {
+            width: 100%;
+            display: block;
+            border: none;
+          }
+          #comment_body {
+            outline: 0;
           }
         }
-        &__new {
-          display: inline-block;
-          width: 100%;
-          &__body {
-            width: 100%;
-            #comment_body {
-              width: 100%;
-              display: block;
-              border: none;
-            }
-            #comment_body {
-              outline: 0;
+        &__bottom {
+          display:flex;
+          justify-content: flex-end;
+          margin-top: 0.5em;
+          &__image {
+            font-size: 1.5rem;
+            margin-right: 0.5em;
+            label {
+              margin-bottom: 0;
             }
           }
-          &__bottom {
-            display:flex;
-            justify-content: flex-end;
-            margin: 0.5em;
-            &__image {
-              font-size: 1.5rem;
-              margin-right: 0.5em;
-            }
-            &__submit {
-
+          &__submit {
+            input {
+              padding: 0 0.5rem;
+              background-color: #002966;
+              color: #fff;
+              border: 1px solid #002966;
+              border-radius: 0.2rem;
             }
           }
         }
