--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -114,6 +114,7 @@
           border-left: solid 1px #ccc;
           border-right: solid 1px #ccc;
           background-color: #fff;
+          z-index: 1;
           .post-item-brand__name {
             padding: 0.5rem;
             margin: 0;
@@ -147,12 +148,21 @@
         width: 60%;
         margin-top:1rem;
         display: flex;
+        align-items: flex-start;
         .add-item {
           width: 15%;
           margin-right: 5%;
           border: solid 1px #ccc;
           background-color: rgb(238, 238, 238);
           padding: 0.5rem;
+          position:relative;
+          &__delete {
+            position:absolute;
+            top: 0;
+            right: 0;
+            line-height: 0.4rem;
+            cursor: pointer;
+          }
           img {
             width:100%;
             height: auto;
@@ -178,6 +188,75 @@
           border: solid 1px #ccc;
           color: rgb(99, 99, 99);
           width: 65%;
+        }
+      }
+    }
+    &__salon {
+      .searchbox__form__select {
+        width:65%;
+      }
+      .searchbox__form__search {
+        width: 65%;
+      }
+      .form-selected {
+        width:65%;
+        font-size: 0.9rem;
+        line-height: 1rem;
+        align-items: center;
+        display: flex;
+        z-index: 2;
+        position: relative;
+        .searchbox__form__selected__bgc {
+          position: absolute;
+          top:0;
+          left: 0;
+          background-color: #eee;
+          width: 100%;
+          height: 100%;
+          span {
+            position: absolute;
+            left:102%;
+            line-height: 3rem;
+            color: #ccc;
+            cursor: pointer;
+            z-index: 1;
+          }
+        }
+        span {
+          z-index: 1;
+        }
+      }
+    }
+    &__length {
+      .searchbox__form__select {
+        width:65%;
+      }
+      .form-selected {
+        width:65%;
+        font-size: 0.9rem;
+        line-height: 1rem;
+        align-items: center;
+        display: flex;
+        z-index: 2;
+        position: relative;
+        .searchbox__form__selected__bgc {
+          position: absolute;
+          top:0;
+          left: 0;
+          background-color: #eee;
+          width: 100%;
+          height: 100%;
+          span {
+            position: absolute;
+            left:102%;
+            line-height: 3rem;
+            color: #ccc;
+            cursor: pointer;
+            z-index: 1;
+          }
+        }
+        span {
+          z-index: 1;
         }
       }
     }
