--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -64,20 +64,61 @@
       .post-new__form__salon__head.form-content__head
         サロン
       .post-new__form__salon__area.form-content__content
-        = f.collection_select :area_id, Area.all, :id, :name, {prompt: 'エリアを選択してください'}
-        = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: 'サロンを選択してください'}
-      -# .post-new__form__salon__salon
-      -#   = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: '---'}
+        .searchbox__form__select
+          %span エリア
+          = icon "fas", "chevron-right"
+          .searchbox__form__select__list
+            .searchbox__form__select__list__contents
+              - Area.all.each do |area|
+                .searchbox__form__select__list__contents__content.area-content{data: {id: area.id}}
+                  = area.name
+        .searchbox__form__area-selected.form-selected
+        .searchbox__form__search
+          = f.hidden_field :salon_id, name: 'post[salon_id]', value: '', id: 'content_id'
+          %input.searchbox__form__search__salon#salon-search{placeholder: "サロンを探す", type: "text", autocomplete: "off"}
+          #salon-search-result
+        .searchbox__form__salon-selected.form-selected
+        -# = f.collection_select :area_id, Area.all, :id, :name, {prompt: 'エリアを選択してください'}
+        -# = f.collection_select :salon_id, Salon.all, :id, :name, {prompt: 'サロンを選択してください'}
     .post-new__form__gender.form-content
       .post-new__form__gender__head.form-content__head
         性別
       .post-new__form__gender__select.form-content__content
-        = f.collection_select :gender_id, Gender.all, :id, :name, {prompt: '選択してください'}
+        .searchbox__form__radio
+          = f.collection_radio_buttons(:gender_id, Gender.all, :id, :name) do |b|
+            = b.label { b.radio_button + b.text }
+          -# = f.collection_check_boxes(:gender_id, Gender.all, :id, :name) do |b|
+          -#   = b.label { b.check_box + b.text }
     .post-new__form__length.form-content
       .post-new__form__length__head.form-content__head
         Length
       .post-new__form__length__select.form-content__content
-        = f.collection_select :length_id, Length.all, :id, :name, {prompt: '選択してください'}
+        .searchbox__form__select
+          %span Length
+          = icon "fas", "chevron-right"
+          = f.hidden_field :length_id, value: '', id: 'length_id'
+          .searchbox__form__select__list
+            %span#nogender 性別を選択してください
+            .searchbox__form__select__list__contents#Women-contents
+              %span Women
+              - length_select(1).each do |length|
+                .searchbox__form__select__list__contents__content.length-content{data: {id: length.id}}
+                  = length.name
+            .searchbox__form__select__list__contents#Men-contents
+              %span Men
+              - length_select(2).each do |length|
+                .searchbox__form__select__list__contents__content.length-content{data: {id: length.id}}
+                  = length.name
+        .searchbox__form__length-selected.form-selected
+    -#   .post-new__form__gender__head.form-content__head
+    -#     性別
+    -#   .post-new__form__gender__select.form-content__content
+    -#     = f.collection_select :gender_id, Gender.all, :id, :name, {prompt: '選択してください'}
+    -# .post-new__form__length.form-content
+    -#   .post-new__form__length__head.form-content__head
+    -#     Length
+    -#   .post-new__form__length__select.form-content__content
+    -#     = f.collection_select :length_id, Length.all, :id, :name, {prompt: '選択してください'}
     .post-new__form__age.form-content
       .post-new__form__age__head.form-content__head
         年齢
