--- a/app/assets/stylesheets/items/search.scss
+++ b/app/assets/stylesheets/items/search.scss
@@ -27,8 +27,9 @@
         display: flex;
         flex-wrap: wrap;
         &__item {
+          position: relative;
           font-size: 0.8rem;
-          padding:1rem;
+          padding:1rem 1rem 3rem 1rem;
           width: 22%;
           margin: 0 4% 2rem 0;
           border: 1px solid #ccc;
@@ -43,6 +44,14 @@
             font-weight: bold;
             text-align: center;
             padding:0.5rem 0;
+          }
+          &__count {
+            position: absolute;
+            bottom:2rem;
+          }
+          &__link {
+            position: absolute;
+            bottom:1rem;
           }
         }
         &__item:nth-child(4n) {
