--- a/app/assets/stylesheets/users/timeline.scss
+++ b/app/assets/stylesheets/users/timeline.scss
@@ -1,26 +1,73 @@
 .timeline {
-  padding: 2em 0;
-  &__head {
-    font-size: 1.1rem;
-    margin-top: 1em;
-  }
-  &__posts {
-    >div {
-      display: none;
-      .posts {
-        display: flex;
-        flex-wrap: wrap;
-        .post {
-          margin: 1em 2% 1em 0;
-          width: 23.5%;
+  padding: 3em 0;
+  display: flex;
+  justify-content: space-between;
+  &__recommend{
+    width: 18%;
+    &__head {
+      font-size: 1.1rem;
+      margin: 1em 0;
+    }
+    &__users {
+      border: 1px solid #ccc;
+      border-radius: 0.2rem;
+      background-color: #fff;
+      text-align: center;
+      &__user {
+        padding:1.5rem;
+        border-bottom: 1px solid #ccc;
+        &__icon {
+          width: 4rem;
+          height: 4rem;
+          margin: 0 auto;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 2rem;
+          }
         }
-        .post:nth-child(4n) {
-          margin: 1em 0;
+        &__name {
+          font-weight: bold;
+        }
+        &__follower {
+          font-weight: bold;
+          span {
+            font-size: 0.8rem;
+            margin-right: 0.5rem;
+            font-weight: normal;
+          }
+        }
+        &__common {
+          font-size: 0.7rem;
+          color: #999;
         }
       }
     }
-    .active {
-      display: block;
+  }
+  &__main {
+    width: 77%;
+    &__head {
+      font-size: 1.1rem;
+      margin: 1em 0;
+    }
+    &__posts {
+      >div {
+        display: none;
+        .posts {
+          display: flex;
+          flex-wrap: wrap;
+          .post {
+            // margin: 1em 2% 1em 0;
+            // width: 23.5%;
+          }
+          .post:nth-child(3n) {
+            margin: 0 0 2.5em 0;
+          }
+        }
+      }
+      .active {
+        display: block;
+      }
     }
   }
 }
