--- a/app/assets/stylesheets/items/search.scss
+++ b/app/assets/stylesheets/items/search.scss
@@ -29,13 +29,12 @@
         &__item {
           position: relative;
           font-size: 0.8rem;
-          padding:1rem 1rem 3rem 1rem;
+          padding:1rem 1rem 3.5rem 1rem;
           width: 22%;
           margin: 0 4% 2rem 0;
           border: 1px solid #ccc;
           border-radius: 0.3rem;
           background-color: #fff;
-
           img {
             display: block;
             margin: 0 auto;
@@ -47,11 +46,24 @@
           }
           &__count {
             position: absolute;
-            bottom:2rem;
+            bottom:1.6rem;
+            font-size: 1rem;
+            font-weight: bold;
+            label {
+              margin-bottom: 0;
+              cursor: pointer;
+              span{
+                font-weight: normal;
+                font-size: 0.8rem;
+              }
+            }
+            label:hover {
+              opacity: 0.8;
+            }
           }
           &__link {
             position: absolute;
-            bottom:1rem;
+            bottom:0.7rem;
           }
         }
         &__item:nth-child(4n) {
