--- a/app/assets/stylesheets/salons/_salon.scss
+++ b/app/assets/stylesheets/salons/_salon.scss
@@ -8,52 +8,65 @@
   border-radius: 0.3rem;
   display: block;
   color: inherit;
-  padding: 0.8rem;
+  padding: 0.8rem 1.5rem;
   background-color: #fff;
   margin-bottom: 1rem;
   &__contents {
-    
     &__main {
       display: flex;
+      justify-content: space-between;
       width: 100%;
 
       &__left {
-        width:50%;
+        width:25%;
         img {
           width: 100%;
           height: auto;
-
         }
       }
       &__right {
-        width:50%;
-        padding: 0.8rem;
+        width:70%;
+        padding-top: 0.5rem;
         &__namekana {
           font-size: 0.3rem;
-          height:7%;
         }
         &__name{
           font-size: 1.1rem;
-          height:30%;
         }
         &__introduction{
           font-size: 0.8rem;
-          height:55%;
         }
         &__access {
           margin-top: 1rem;
           font-size: 0.6rem;
-          height:10%;
           span{
             margin-right: 1rem;
           }
         }
         &__address {
           font-size: 0.6rem;
-          height:10%;
           span{
             margin-right: 1rem;
           }
+        }
+      }
+    }
+    &__counts {
+      display: flex;
+      justify-content: center;
+      &__post {
+        margin-right: 4rem;
+        font-weight: bold;
+        span{
+          font-weight: normal;
+          font-size: 0.8rem;
+        }
+      }
+      &__user {
+        font-weight: bold;
+        span{
+          font-weight: normal;
+          font-size: 0.8rem;
         }
       }
     }
