--- a/app/assets/stylesheets/salons/show.scss
+++ b/app/assets/stylesheets/salons/show.scss
@@ -44,9 +44,44 @@
           margin-right: 1rem;
         }
       }
+      &__count {
+        margin-top: 1rem;
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid #ccc;
+        &__style {
+          margin-right: 2rem;
+          label {
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 1.2rem;
+            span {
+              font-weight: normal;
+              font-size: 0.7rem;
+            }
+          }
+          label:hover {
+            opacity:0.8;
+          }
+        }
+        &__user {
+          label {
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 1.2rem;
+            span {
+              font-weight: normal;
+              font-size: 0.7rem;
+            }
+          }
+          label:hover {
+            opacity:0.8;
+          }
+        }
+      }
       &__reservation {
         text-align: end;
-        margin: 1rem;
+        margin-top: 1rem;
         text-decoration: underline;
         a {
           color: #002966;
