--- a/app/assets/stylesheets/users/edit.scss
+++ b/app/assets/stylesheets/users/edit.scss
@@ -38,6 +38,77 @@
       &__basicForm {
         padding: 2rem;
         border-bottom: 1px solid #ccc;
+        &__gender {
+          &__select {
+            line-height: 2rem;
+            font-size: 0.8rem !important;
+            input {
+              margin-right: 0.3rem;
+            }
+          }
+        }
+        &__length {
+          &__select {
+            &__women {
+              display: none;
+            }
+            &__men {
+              display: none;
+            }
+            span {
+              display: block;
+              font-size: 1rem;
+            }
+          }
+        }
+        &__salon {
+          &__select {
+            .searchbox__form__select {
+              width: 65%;
+              &__list {
+                font-size: 0.5rem;
+              }
+            }
+            .searchbox__form__search {
+              width: 65%;
+            }
+            &__name {
+              display: inline;
+              font-size: 0.9rem;
+              line-height: 2rem;
+              border-bottom: 1px solid #ccc;
+              padding-bottom: 0.5rem;
+            }
+          }
+          .form-selected {
+            width:65%;
+            font-size: 0.9rem;
+            line-height: 1rem;
+            align-items: center;
+            display: flex;
+            z-index: 2;
+            position: relative;
+            .searchbox__form__selected__bgc {
+              position: absolute;
+              top:0;
+              left: 0;
+              background-color: #eee;
+              width: 100%;
+              height: 100%;
+              span {
+                position: absolute;
+                left:102%;
+                line-height: 3rem;
+                color: #ccc;
+                cursor: pointer;
+                z-index: 1;
+              }
+            }
+            span {
+              z-index: 1;
+            }
+          }
+        }
         .list{
           display: flex;
           justify-content: space-between;
