search-header-create

--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -1,4 +1,5 @@
 .post-search.individual-page
+  = render 'shared/search-header'
   .post-search__head.individual-page__head
     .post-search__head__contents.individual-page__head__contents
       = icon 'fas', 'camera-retro', class: 'search-icon'
