--- a/app/views/users/search.html.haml
+++ b/app/views/users/search.html.haml
@@ -1,4 +1,5 @@
 .user-search.individual-page
+  = render 'shared/search-header'
   .user-search__head.individual-page__head
     .user-search__head__contents.individual-page__head__contents
       = icon 'fas', 'user', class: ''
