--- a/app/views/items/search.html.haml
+++ b/app/views/items/search.html.haml
@@ -1,4 +1,5 @@
 .item-search.individual-page
+  = render 'shared/search-header'
   .item-search__head.individual-page__head
     .item-search__head__contents.individual-page__head__contents
       .item-search-icon
