--- a/app/views/salons/search.html.haml
+++ b/app/views/salons/search.html.haml
@@ -1,4 +1,5 @@
 .salon-search.individual-page
+  = render 'shared/search-header'
   .salon-search__head.individual-page__head
     .salon-search__head__contents.individual-page__head__contents
       = icon 'fas', 'store-alt', class: ''
