--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -36,7 +36,7 @@
           - if user_signed_in?
             - if current_user.id == @post.user.id
               %button{type: "button", class: "btn btn-primary", id: "user-edit"}
-                = link_to '編集', edit_user_registration_path(@post.user)
+                = link_to '編集', edit_user_path(current_user)
             - else
               - if current_user.following? @post.user
                 %button{type: "button", class: "btn btn-primary", id: "unfollow"}
