--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -7,7 +7,7 @@
       - if user_signed_in?
         - if current_user.id == user.id
           %button{type: "button", class: "btn btn-primary", id: "user-edit"}
-            = link_to '編集', edit_user_registration_path(user)
+            = link_to '編集', edit_user_path(current_user)
         - else
           - if current_user.following? user
             %button{type: "button", class: "btn btn-primary", id: "unfollow"}
