--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -58,7 +58,7 @@
                       = area.name
             .searchbox__form__area-selected.form-selected
             .searchbox__form__search
-              = f.hidden_field :salon_id, name: 'user[salon_id]', value: '', id: 'content_id'
+              = f.hidden_field :salon_id, name: 'user[salon_id]', value: "#{@user.salon_id}", id: 'content_id'
               %input.searchbox__form__search__salon#salon-search{placeholder: "サロンを探す", type: "text", autocomplete: "off"}
               #salon-search-result
             .searchbox__form__salon-selected.form-selected
