--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -89,6 +89,7 @@
           border-bottom: 1px solid #ccc;
         }
         &__item {
+          overflow: scroll;
           img {
             display: block;
             margin: 0 auto;
@@ -187,6 +188,7 @@
           }
         }
         &__body {
+          overflow: scroll;
         }
         &__date {
           position: absolute;
