--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -73,11 +73,13 @@
     margin-top: 7em;
     &__post {
       display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
       width: 100%;
       &__items {
         width: 15%;
-        margin-right: 1.5em;
         padding: 1rem;
+        min-height: 39rem;
         border: 1px solid rgba(128, 128, 128, 0.3);
         // border-right: none;
         font-size: 0.5rem;
@@ -89,7 +91,6 @@
           border-bottom: 1px solid #ccc;
         }
         &__item {
-          overflow: scroll;
           img {
             display: block;
             margin: 0 auto;
@@ -102,8 +103,7 @@
         }
       }
       &__left {
-        width: 50%;
-        margin-right: 1.5em;
+        width: 45%;
         padding: 0 0 !important;
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
@@ -162,7 +162,7 @@
         background-color: #fff;
         border: solid 1px rgba(128, 128, 128, 0.3);
         border-radius: 0.25em;
-        padding:1em 1rem;
+        padding:1em 1rem 4rem;
         // width:100%;
         box-sizing: border-box;
         position: relative;
@@ -189,6 +189,9 @@
         }
         &__body {
           overflow: scroll;
+          min-height: 30rem;
+          max-height: 35rem;
+          font-size: 0.8rem;
         }
         &__date {
           position: absolute;
